# itsolution-test

./: Dockerfile  README.md  compose.yml  pyproject.toml
runstring_app/: apps.py  models.py  views.py
runstring_app/migrations/: 0001_initial.py
server/: settings.py  urls.py
utils/: video.py
